# AI-Engineer

./: .env.example  .gitignore  LICENSE  README.md  ai-engineer.py  mcp.config.example.json  pyproject.toml  requirements.txt
AI_engineer/: __init__.py  api_client.py  config.py  conversation.py  error_detection.py  file_operations.py  main.py  models.py  prompts.py  providers.py  pydantic_mcp_integration.py  tools.py  ui.py
test/: README.md  test_js_errors.js  test_recursive_calling.py  test_ts_errors.ts
