[project]
name = "AI-engineer"
version = "0.2.0"
description = "AI-powered coding assistant with multi-provider support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.58.1",
    "prompt-toolkit>=3.0.50",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "flake8>=7.0.0",
]
