[project]
name = "AI-engineer"
version = "0.2.0"
description = "AI-powered coding assistant with multi-provider support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.75.0",
    "prompt-toolkit>=3.0.43",
    "pydantic>=2.11.3",
    "python-dotenv>=1.0.1",
    "rich>=14.0.0",
    "flake8>=7.0.0",
    "watchdog>=6.0.0",
    "mcp>=1.6.0",
    "pydantic-ai>=0.1.3",
    "httpx>=0.25.0",
]
